# programming-for-data-science-2019

./: .gitignore  README.org  setup.org  slides.css  slides.html
berka/: .python-version  berka.py  pyproject.toml
berka/config/: settings.toml
berka/sql/: cohort_new_clients.sql  create_raw_tables.sql  create_schemas.sql  features_aggregated.sql  features_entity_derived.sql  helpers.sql  label_loan_granted.sql  label_loan_granted_3m.sql  to_cleaned.sql  to_semantic.sql
css/: mozilla-dark.css
data/: data1.txt  data2.txt  data3.txt  names.txt  numbers.txt  texto.txt
data/ufo/: UFO-Dic-2014.tsv  UFO-Nov-2014.tsv
scripts/: ufo-analysis.sh
turista/: Makefile  README.md  pyproject.toml  setup.cfg
turista/config/: logging.yaml
turista/data/: paises.csv  properties.csv
turista/tests/: turista_tests.py
turista/turista/: __init__.py  cli.py  helpers.py  turista.py  utils.py
vagrant-ds/: Vagrantfile  bootstrap.sh  vagrant-bootstrap.sh
vagrant-ds/dotfiles/: .nanorc  .psqlrc
