[tool.poetry]
name = "berka"
version = "0.1.0"
description = ""
license = "GPL3.0+"
authors = ["Adolfo De Unánue <a@unanue.mx>"]
include = [
    "README.md",
    "pyproject.toml",
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
dynaconf = "^2.2"
psycopg2 = "^2.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
turista = "berka:berka"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
