[tool.poetry]
name = "turista"
version = "0.1.0"
description = "Simulador del juego de mesa Turista"
authors = ["Adolfo De Unánue <a@unanue.mx>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
seaborn = "^0.9.0"
sphinx = {version = "^2.2", optional = true}
sphinx_rtd_theme = {version = "^0.4.3", optional = true}
colorama = "^0.4.1"
click = "^7.0"

[tool.poetry.dev-dependencies]
ipython = "^7.8"
jupyter = "^1.0"
flake8 = "^3.7"
mypy = "^0.740.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
sphinx = "^2.2"
sphinx_rtd_theme = "^0.4.3"
flake8-docstrings = "^1.5"
isort = "^4.3"
pre-commit = "^1.20"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
