[tool.poetry]
name = "turista"
version = "0.1.0"
description = "Simulador del juego de mesa Turista"
authors = ["Adolfo De Unánue <a@unanue.mx>"]
license = "GPL3.0+"
readme = "README.md"
homepage = "https://turista.readthedocs.io"
repository = "https://github.com/nanounanue/turista"
documentation = "https://turista.readthedocs.io"
include = [
    "README.md",
    "pyproject.toml",
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
click = "^7.0"
toml = "^0.10.0"

sphinx = { version = "^2.1", optional = true }
sphinx_rtd_theme = { version = "^0.4.3", optional = true }
m2r = {version = "^0.2.1", optional = true}
dynaconf = "^2.2"
coloredlogs = "^10.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
xdoctest = "^0.9.1"
pydocstyle = "<4.0"
ipython = "^7.8"
jupyter = "^1.0"
flake8 = "^3.7"
flake8-docstrings = "^1.5"
mypy = "^0.740.0"
black = {version = "^19.3b0", allows-prereleases = true}
sphinx = "^2.2"
sphinx_rtd_theme = "^0.4.3"
isort = {version = "^4.3", extras = ["pyproject"]}
seed-isort-config = "^1.9"
pytest-cov = "^2.7"
pytest-mock = "^1.10"
coverage = "^4.5"
tox = "^3.13"
towncrier = "^19.2"
toml = "^0.10.0"
darglint = "^0.5.7"
docutils = "<0.15.1" # temporary hot patch
pre-commit = "^1.20"

[tool.poetry.extras]
doc = ["sphinx", "sphinx_rtd_theme", "m2r"]

[tool.poetry.scripts]
turista = "turista.cli:simular"


[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
known_first_party = 'turista'
known_third_party = ["click", "pytest"]
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py37

[testenv]
whitelist_externals = poetry
commands =
    poetry install -vvv
    poetry run pytest
"""

[tool.towncrier]
# Usage: (Source: https://github.com/python-trio/trio/blob/master/pyproject.toml)
# - PRs should drop a file like "issuenumber.feature" in newsfragments
#   (or "bugfix", "doc", "removal", "misc")
# - At release time after bumping version number, run:
#   poetry run towncrier --draft, then poetry towncrier
package = "turista"
filename = "doc/changelog.rst"
directory = "newsfragments"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
